# dbay-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
dbay-cli/: README.md  pyproject.toml
dbay-cli/dbay_cli/: client.py  config.py  main.py  output.py
dbay-cli/dbay_cli/commands/: auth.py  branch.py  db.py  export.py  kb.py  mem.py  pipeline.py  setup.py  user.py  version.py
dbay-cli/tests/: test_db_pitr.py
dbay-mcp/: README.md  pyproject.toml
dbay-mcp/src/dbay_mcp/: __init__.py  __main__.py  cli.py  crypto.py  embedding.py  server.py  tool_descriptions.yaml
dbay-mcp/tests/: test_wiki_tools.py
dbay-sre-mcp/: .mcp.json  CHANGELOG.md  PUBLISH-0.2.1.md  README.md  pyproject.toml
dbay-sre-mcp/src/dbay_sre_mcp/: __init__.py  admin_client.py  log_db.py  server.py
dbay-sre-mcp/src/dbay_sre_mcp/tools/: data_consistency_check.py  database_status.py  find_database.py  find_tenant.py  multi_tenant_blast_radius.py  pod_create_failures.py  stuck_task_query.py
dbay-sre-mcp/tests/: test_admin_client.py  test_data_consistency_check.py  test_database_status.py  test_find_database.py  test_find_tenant.py  test_multi_tenant_blast_radius.py  test_pod_create_failures.py  test_stuck_task_query.py  test_tools.py
migrated/workers/lakeon-orchestrator/: Dockerfile  Dockerfile.pipeline-job  pyproject.toml
migrated/workers/lakeon-orchestrator/components/: __init__.py
migrated/workers/lakeon-orchestrator/components/text/: __init__.py  text_clean.py  text_dedup.py  text_quality_score.py  text_tokenize.py
migrated/workers/lakeon-orchestrator/components/universal/: __init__.py  dataset_publish.py
migrated/workers/lakeon-orchestrator/components/video/: __init__.py  model_filter_mock.py  quality_check.py  rule_filter.py  video_crop.py  video_labeling_mock.py  video_normalize.py  video_scene_split.py
migrated/workers/lakeon-orchestrator/src/lakeon_orchestrator/: config.py  main.py  orchestrator.py
migrated/workers/lakeon-orchestrator/tests/: conftest.py  test_api_runs.py  test_branch_router.py  test_checkpoint_manager.py  test_component_context.py  test_component_decorator.py  test_component_loader.py  test_dag_parser.py  test_dag_scheduler.py  test_fan_in_handler.py  test_fan_out_handler.py  test_integration.py  test_orchestrator.py  test_pause_manager.py  test_python_job_client.py  test_ray_client.py  test_state_manager.py
migrated/workers/lakeon-orchestrator/tests/e2e/: conftest.py  test_text_pipeline_e2e.py  test_video_pipeline_e2e.py
migrated/workers/lakeon-orchestrator/tests/fixtures/: sample_texts.jsonl
migrated/workers/lakeon-orchestrator/tests/unit/: conftest.py  test_dataset_publish.py  test_model_filter_mock.py  test_quality_check.py  test_rule_filter.py  test_text_clean.py  test_text_dedup.py  test_text_quality_score.py  test_text_tokenize.py  test_video_crop.py  test_video_labeling_mock.py  test_video_normalize.py  test_video_scene_split.py
migrated/workers/lakeon-wiki-agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
migrated/workers/lakeon-wiki-agent/app/: config.py  deps.py  main.py  tasks.py
migrated/workers/lakeon-wiki-agent/app/agent/: llm.py  loop.py  tools.py
migrated/workers/lakeon-wiki-agent/app/api/: routes.py
migrated/workers/lakeon-wiki-agent/app/clients/: lakeon_api.py
migrated/workers/lakeon-wiki-agent/tests/: test_agent_loop.py  test_api.py  test_config.py  test_lakeon_client.py  test_llm.py  test_tasks.py  test_tools_schema.py
migrated/workers/mem0-dbay/: README.md  pyproject.toml  test_e2e.py
migrated/workers/mem0-dbay/mem0_dbay/: __init__.py  config.py  memory_graph.py  pg_client.py  schema.py  utils.py
migrated/workers/mem0-dbay/tests/: conftest.py  test_config.py  test_db_ops.py  test_utils.py
migrated/workers/reading-companion/: .env.example  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  railway.toml
migrated/workers/reading-companion/docs/: DEPLOY_RUNBOOK.md
migrated/workers/reading-companion/scripts/: verify_env.py
migrated/workers/reading-companion/skills/reading/: SKILL.md
migrated/workers/reading-companion/tests/: conftest.py  test_import_discipline.py  test_main.py
migrated/workers/reading-companion/tests/integration/: test_daily_reflection.py  (+2 more)
sre-agent/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  railway.toml
sre-agent/docs/: DEPLOY_RUNBOOK.md  HERMES_SKILL_DISPATCH.md  OPEN_ISSUES.md
sre-agent/hermes_config/: config.yaml
sre-agent/reports/: b2-refactor-report.md  phase-0b-report.md  phase1-progress.md
sre-agent/scripts/: onboard_feishu.py  probe_dbay_logs.py  simulate_cold_start.py  verify_env.py
sre-agent/skills/sre/: AGENT.md  DESCRIPTION.md
sre-agent/skills/sre/_base/: SKILL.md  watcher_base.py
sre-agent/skills/sre/agentfs_forwarder_orphan_watcher/: SKILL.md  watcher.py
sre-agent/skills/sre/cold_start_watcher/: SKILL.md  diagnose.py  diagnose_prompt.md  report.py  report_template.md  watcher.py
sre-agent/skills/sre/daily_briefing/: SKILL.md  evening_prompt.md  morning_prompt.md  runner.py  weekly_prompt.md
sre-agent/skills/sre/data_consistency_watcher/: SKILL.md  diagnose_prompt.md  watcher.py
sre-agent/skills/sre/domain_glossary/: SKILL.md  symptom_map.md
sre-agent/skills/sre/fuse_queue_health_watcher/: SKILL.md  watcher.py
sre-agent/skills/sre/multi_tenant_blast_radius_watcher/: SKILL.md  diagnose_prompt.md  watcher.py
sre-agent/skills/sre/outcome_checker/: SKILL.md  checker.py
sre-agent/skills/sre/pod_create_failure_watcher/: SKILL.md  watcher.py
sre-agent/skills/sre/stuck_task_watcher/: SKILL.md  watcher.py
sre-agent/tests/: conftest.py  test_import_discipline.py  test_main.py  test_mcp_adapter_v2.py  test_onboard_feishu.py
sre-agent/tests/integration/: test_agentfs_forwarder_orphan_watcher.py  test_cold_start_watcher.py  test_daily_briefing.py  test_data_consistency_watcher.py  test_fuse_queue_health_watcher.py  test_multi_tenant_blast_radius_watcher.py  test_outcome_checker.py  test_pod_create_failure_watcher.py  test_report.py  test_stuck_task_watcher.py  test_watcher_base.py
(+834 files in other folders)
