[project]
name = "dbay-cli"
version = "0.2.8"
description = "DBay CLI — manage memory, knowledge base, and databases from the terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "dbay-mcp>=0.5.7",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
dbay = "dbay_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbay_cli"]
