[project]
name = "dbay-mcp"
version = "0.5.7"
description = "DBay MCP server — knowledge base and agent memory for AI tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
]

[project.scripts]
dbay-mcp = "dbay_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbay_mcp"]
