[project]
name = "dbay-sre-mcp"
version = "0.2.1"
description = "MCP server exposing SRE-style log diagnostics (search, trace, errors, stats) over a Postgres-backed log store"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "Jacky Li", email = "jackylk@apache.org" },
]
keywords = ["mcp", "sre", "logs", "postgres", "agent", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "fastmcp>=2.0",
  "psycopg2-binary>=2.9",
  "pyyaml>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
dbay-sre-mcp = "dbay_sre_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/MatrixDriver/dbay-agent/tree/main/dbay-sre-mcp"
Repository = "https://github.com/MatrixDriver/dbay-agent"
Issues = "https://github.com/MatrixDriver/dbay-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbay_sre_mcp"]
