[project]
name = "sre-agent"
version = "0.0.1"
description = "dbay.cloud SRE agent — incident detection + diagnosis + outcome tracking"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
  "croniter>=2.0",
  "esdk-obs-python>=3.24",
  "trafilatura>=1.6",
  "agent-session-log",
  "hermes-agent-utils",
]

[tool.uv.sources]
agent-session-log = { workspace = true }
hermes-agent-utils = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["skills"]
