[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakeon-orchestrator"
version = "0.1.0"
description = "Pipeline Orchestrator for Lakeon data pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pyyaml>=6.0.2",
    "kubernetes_asyncio>=31.0.0",
    "boto3>=1.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "trafilatura>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]
components = [
    "scenedetect[opencv]>=0.6",
    "datasketch>=1.6",
    "jieba>=0.42",
    "tiktoken>=0.5",
    "pylance>=0.9",
    "pyarrow>=14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lakeon_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests (may require external dependencies like ffmpeg)",
]
