[project]
name = "reading-companion"
version = "0.0.1"
description = "dbay reading companion — fetch URLs, distill via LLM, link to past readings, daily reflect."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "trafilatura>=1.6",
  "agent-session-log",
  "hermes-agent-utils",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.uv.sources]
agent-session-log = { workspace = true }
hermes-agent-utils = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]
